--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
+    "cheerio": "^1.0.0-rc.12",
     "cookie": "^0.6.0",
     "daisyui": "^4.12.14",
     "jsonwebtoken": "^9.0.2",
@@ -17,9 +19,11 @@
     "mongoose": "^8.1.1",
     "next": "13.4.19",
     "next-auth": "^4.24.11",
+    "openai": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "youtube-transcript": "^1.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
