--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "13.4.19",
     "next-auth": "^4.24.11",
     "openai": "^4.0.0",
+    "puppeteer": "^24.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
