--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^8.1.1",
     "next": "13.4.19",
     "next-auth": "^4.24.11",
+    "node-fetch": "^2.7.0",
     "openai": "^4.0.0",
     "puppeteer": "^24.3.1",
     "react": "^18.2.0",
